--- a/package.json
+++ b/package.json
@@ -48,13 +48,13 @@
     "highlight.js": "^9.15.10",
     "lodash-es": "^4.17.15",
     "moment": "^2.24.0",
+    "nollup": "^0.6.3",
     "nunjucks": "^3.2.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "regenerator-runtime": "^0.13.3",
     "rollup": "^1.20.2",
     "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-postcss": "^2.0.3",
     "rollup-plugin-replace": "^2.2.0",
@@ -66,6 +66,7 @@
     "babel-eslint": "^10.0.3",
     "eslint": "^6.2.2",
     "eslint-config-google": "^0.13.0",
-    "eslint-plugin-react": "^7.14.3"
+    "eslint-plugin-react": "^7.14.3",
+    "rollup-plugin-commonjs-alternate": "0.0.6"
   }
 }
